--- a/index.html
+++ b/index.html
@@ -2,12 +2,49 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Untitled</title>
+	<title>Centered</title>
 	<style type="text/css">
-	*	{margin:0; padding:0; border:0;}
+	* 	{
+		margin:0;
+		padding:0;
+		border:0;
+	}
+	body	{
+		color: #fff;
+		background-color: #000;
+		}
+
+	#container	{
+		background-color: transparent;
+		text-align: center;
+		position: absolute;
+		top: 50%;
+		left: 0px;
+		width: 100%;
+		height: 1px;
+		overflow: visible;
+		visibility: visible;
+		display: block;
+	}
+
+	#content	{
+		color: #000;
+		background-color: #fff;
+		margin-left: -125px;
+		position: absolute;
+		top: -35px;
+		left: 50%;
+		width: 250px;
+		height: 70px;
+		visibility: visible;
+		}
 	</style>
 </head>
 <body>
-index
+	<div id="container">
+		<div id="content">
+			center
+		</div>
+	</div>
 </body>
 </html>
